profile page done

--- a/src/Components/Dashboard/Profile/Profile.css
+++ b/src/Components/Dashboard/Profile/Profile.css
@@ -2,3 +2,132 @@
   padding-left: 80px;
   text-align: center;
 }
+.mainorgpiclabel {
+  border-radius: 25px;
+  border: 2px solid #77c720;
+  padding: 15px;
+}
+.orgname {
+  text-align: center;
+  align-items: center;
+  background-color: black;
+}
+.orgname1 {
+  text-align: center;
+  align-items: center;
+}
+.progress-bar {
+  height: 5px;
+  background: var(--primary);
+  margin-top: 20px;
+}
+.buttonorg {
+  font-weight: bold;
+  text-shadow: 0 1px 1px 0px #000;
+  background-image: linear-gradient(45deg, red, orange);
+  border: 2px solid black;
+  padding: 6px 12px;
+  cursor: pointer;
+  border-radius: 20px;
+  box-shadow: 0px 1px 2px 1px black;
+}
+
+.worktext {
+  align-items: center;
+}
+textarea[type="work"] {
+  display: block;
+  width: 100%;
+  padding: 12px 12px;
+  padding-left: 30px;
+  font-size: 14px;
+  line-height: 1;
+  align-items: center;
+  background-image: none;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
+/*Reach*/
+.Reach {
+  margin-top: 20px;
+  margin-bottom: 20px;
+  text-align: center;
+  align-items: center;
+  color: #fff;
+  background-color: black;
+}
+input[type="file"] {
+  font-size: 9px;
+}
+input[type="reach"] {
+  display: block;
+
+  padding: 12px 12px;
+  font-size: 14px;
+  line-height: 1;
+
+  background-image: none;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
+.containero {
+  margin-top: 60px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+.containero .cardo {
+  position: relative;
+  min-width: 300px;
+  height: 200px;
+}
+.containero .cardo .boxo {
+  position: absolute;
+  border: 3px solid black;
+
+  border-radius: 13px;
+  box-shadow: 0 50px 50px rgba(0, 0, 0, 0.5);
+  transition: 0.5s;
+}
+
+.containero .cardo .boxo .contento {
+  text-align: center;
+  text-align: justify;
+}
+
+.orgabout {
+  padding-left: 5rem;
+  border-radius: 10px;
+  margin-bottom: 40px;
+  box-shadow: 0 20px 30px #77c720;
+  align-items: center;
+}
+.card-org {
+  border-radius: 10px;
+  margin-bottom: 40px;
+  box-shadow: 0 20px 30px #77c720;
+}
+
+.accredential label {
+  text-align: center;
+}
+
+.orgbtn {
+  position: relative;
+  display: inline-block;
+  margin-bottom: 12px;
+  padding: 8px 20px;
+  background: orange;
+  margin-top: 15px;
+  border-radius: 20px;
+  text-decoration: none;
+  font-weight: 400;
+  color: white;
+}
+.orgbtn:hover {
+  background-color: #77c720;
+}
