events page done

--- a/src/Components/Dashboard/Events/Events.css
+++ b/src/Components/Dashboard/Events/Events.css
@@ -3,3 +3,11 @@
   padding-left: 80px;
   text-align: center;
 }
+.Reach {
+  margin-top: 20px;
+  margin-bottom: 20px;
+  text-align: center;
+  align-items: center;
+  color: #fff;
+  background-color: black;
+}
