--- a/src/Components/Dashboard/Profile/Profile.css
+++ b/src/Components/Dashboard/Profile/Profile.css
@@ -10,12 +10,33 @@
 .orgname {
   text-align: center;
   align-items: center;
-  background-color: black;
 }
 .orgname1 {
   text-align: center;
   align-items: center;
 }
+.orgdiv {
+  margin-top: -6%;
+}
+.orgbtn1 {
+  position: relative;
+  display: inline-block;
+
+  font-weight: bold;
+  text-shadow: 0 1px 1px 0px #000;
+  background-image: linear-gradient(45deg, red, orange);
+  border: 2px solid black;
+  padding: 3px 7px;
+  cursor: pointer;
+  border-radius: 20px;
+  margin-right: 55%;
+}
+.orgname2 {
+  text-align: center;
+  align-items: center;
+  /* background-color: black; */
+}
+
 .progress-bar {
   height: 5px;
   background: var(--primary);
@@ -47,7 +68,46 @@ textarea[type="work"] {
   border: 1px solid #ccc;
   border-radius: 4px;
 }
-
+.orglogoo1 {
+  margin-top: -25%;
+  margin-bottom: 0px;
+  margin-left: 50%;
+}
+.orglogoo {
+  margin-top: -8%;
+  margin-left: 13%;
+}
+.covorg {
+  margin-bottom: -5%;
+  margin-right: -1%;
+  z-index: 2;
+}
+.covbtn {
+  position: relative;
+  display: inline-block;
+  font-weight: bold;
+  text-shadow: 0 1px 1px 0px #000;
+  background-image: linear-gradient(45deg, red, orange);
+  border: 2px solid black;
+  padding: 3px 7px;
+  cursor: pointer;
+  border-radius: 20px;
+}
+.logongo {
+  width: 120px;
+  height: 120px;
+  border-radius: 100%;
+  border: 2px solid white;
+  align-items: flex-start;
+  margin-right: 80%;
+  margin-top: -12%;
+  cursor: pointer;
+}
+.logobutton {
+  align-items: flex-end;
+  /* margin-right: 80%; */
+  /* margin-top: -9%; */
+}
 /*Reach*/
 .Reach {
   margin-top: 20px;
@@ -56,6 +116,15 @@ textarea[type="work"] {
   align-items: center;
   color: #fff;
   background-color: black;
+}
+.Reach1 {
+  margin-top: -7%;
+
+  margin-bottom: 20px;
+  text-align: center;
+  align-items: center;
+  color: #000;
+  /* background-color: black; */
 }
 input[type="file"] {
   font-size: 9px;
