--- a/src/Components/Dashboard/sidebar/Sidebar.css
+++ b/src/Components/Dashboard/sidebar/Sidebar.css
@@ -3,9 +3,11 @@
 }
 
 #header {
-  position: absolute;
+  position: fixed;
   width: 220px;
-  height: 100vh;
+  z-index: 1000;
+  display: block;
+  height: 100%;
 }
 #header .pro-sidebar {
   height: 100vh;
