--- a/src/Components/List/List.css
+++ b/src/Components/List/List.css
@@ -1,19 +1,21 @@
-.card {
+.cardlist {
   flex-direction: row;
   align-items: center;
   margin-right: 20px;
-  margin-bottom: 20px;
+  margin-bottom: 25px;
   margin-top: 20px;
 }
 .card-title {
   font-weight: bold;
 }
+
 .card-img-top {
   padding: 20px;
   width: 30%;
   border-top-right-radius: 0;
   border-bottom-left-radius: calc(0.25rem - 1px);
 }
+
 @media only screen and (max-width: 768px) {
   a {
     display: none;
